trying to fix immages on small 1250px being streched

--- a/assets/style.css
+++ b/assets/style.css
@@ -200,3 +200,8 @@ img {
 	color: #6a4329;
 	font-weight: 400;
 }
+
+@media (min-width:1250px){
+	
+}
+
